test/data/syntax-errors/parameter-missing-type.ava
var thisFunction = (x) -> x + 1;